@@ -1,3 +1,7 @@
+2005-06-15  Not Zed  <NotZed@Ximian.com>
+
+	* mail-ops.c (expunge_folder_expunge): call sync w/ expunge.
+
 2005-06-12  Not Zed  <NotZed@Ximian.com>
 
 	* mail-session.c (ms_get_service, ms_get_uri): implement overrides
